# arc-gemm

./: .clangd.template  .gitignore  README.md  config.yaml.template  pyproject.toml  setup.sh
arc/: __init__.py  jit.py  math.py  mm.py  vecadd.py
arc/csrc/: tcgen05.cu  tma.cu
arc/experiments/: __init__.py  tcgen05.py  tma.py
arc/include/: add.cuh  common.cuh  mm.cuh  tcgen05.cuh  utils.cuh
arc/include/ptx/: tcgen05.cuh  tma.cuh
arc/testing/: __init__.py  bench.py  quant.py
assets/: hardware.md  microbench.md
assets/experiments/: tcgen05.md  tma.md
tests/: a8w4.py  add.py  matmul.py  tcgen05.py  tma.py
